// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Build Pipeline GitHub Container Build Pipeline creates basic pipeline with single stage 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: container-build
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  build:
    name: Build container image
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: write
    env:
      DOCKER_BUILDKIT: "1"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set up environment variables
        run: |-
          echo "BRANCH_NAME=\${{ github.ref_name }}" >> $GITHUB_ENV
          echo "COMMIT_SHA=\${{ github.sha }}" >> $GITHUB_ENV
          echo "SHORT_SHA=$(echo \${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3
      - name: Build Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          file: ./Dockerfile
          tags: myapp:\${COMMIT_SHA}
          platforms: linux/amd64
          push: false
          load: true
          cache-from: type=gha
          cache-to: type=gha,mode=max
      - name: Save image as tarball
        run: docker save myapp:\${COMMIT_SHA} | gzip > image.tar.gz
      - name: Upload image artifact
        uses: actions/upload-artifact@v4
        with:
          name: container-image
          path: image.tar.gz
          retention-days: 1
  stage-production:
    name: Deploy to production
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: write
      id-token: write
    env:
      DOCKER_BUILDKIT: "1"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
      - name: Set up environment variables
        run: |-
          echo "BRANCH_NAME=\${{ github.ref_name }}" >> $GITHUB_ENV
          echo "COMMIT_SHA=\${{ github.sha }}" >> $GITHUB_ENV
          echo "SHORT_SHA=$(echo \${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
      - name: Download image artifact
        uses: actions/download-artifact@v4
        with:
          name: container-image
      - name: Load image from tarball
        run: docker load < image.tar.gz
      - name: Login to Docker Hub
        uses: docker/login-action@v3
        with:
          username: \${{ secrets.DOCKERHUB_USERNAME }}
          password: \${{ secrets.DOCKERHUB_TOKEN }}
      - name: Push image myapp:\${COMMIT_SHA}
        run: docker push myapp:\${COMMIT_SHA}
      - name: Push image myapp:\${BRANCH_NAME}
        run: docker push myapp:\${BRANCH_NAME}
      - name: Push image myapp:production
        run: docker push myapp:production
"
`;

exports[`Container Build Pipeline GitHub Container Build Pipeline creates pipeline with feature branch support 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: container-build
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  build:
    name: Build container image
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: write
    env:
      DOCKER_BUILDKIT: "1"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set up environment variables
        run: |-
          echo "BRANCH_NAME=\${{ github.ref_name }}" >> $GITHUB_ENV
          echo "COMMIT_SHA=\${{ github.sha }}" >> $GITHUB_ENV
          echo "SHORT_SHA=$(echo \${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3
      - name: Build Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          file: ./Dockerfile
          tags: myapp:\${COMMIT_SHA}
          platforms: linux/amd64
          push: false
          load: true
          cache-from: type=gha
          cache-to: type=gha,mode=max
      - name: Save image as tarball
        run: docker save myapp:\${COMMIT_SHA} | gzip > image.tar.gz
      - name: Upload image artifact
        uses: actions/upload-artifact@v4
        with:
          name: container-image
          path: image.tar.gz
          retention-days: 1
  stage-production:
    name: Deploy to production
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: write
      id-token: write
    env:
      DOCKER_BUILDKIT: "1"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
      - name: Set up environment variables
        run: |-
          echo "BRANCH_NAME=\${{ github.ref_name }}" >> $GITHUB_ENV
          echo "COMMIT_SHA=\${{ github.sha }}" >> $GITHUB_ENV
          echo "SHORT_SHA=$(echo \${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
      - name: Download image artifact
        uses: actions/download-artifact@v4
        with:
          name: container-image
      - name: Load image from tarball
        run: docker load < image.tar.gz
      - name: Login to Amazon ECR
        uses: aws-actions/amazon-ecr-login@v2
        with: {}
      - name: Tag image as $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
        run: docker tag myapp:\${COMMIT_SHA} $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
      - name: Tag image as $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/myapp:production
        run: docker tag myapp:\${COMMIT_SHA} $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/myapp:production
      - name: Push image $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
        run: docker push $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
      - name: Push image $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/myapp:production
        run: docker push $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/myapp:production
"
`;

exports[`Container Build Pipeline GitHub Container Build Pipeline creates pipeline with feature branch support 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: container-build-feature
on:
  pull_request:
    types:
      - opened
      - synchronize
      - reopened
  workflow_dispatch: {}
jobs:
  build-and-push:
    name: Build and push feature branch image
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: write
      id-token: write
    env:
      DOCKER_BUILDKIT: "1"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
      - name: Set up environment variables
        run: |-
          echo "PR_NUMBER=\${{ github.event.pull_request.number }}" >> $GITHUB_ENV
          echo "BRANCH_NAME=\${{ github.head_ref }}" >> $GITHUB_ENV
          echo "COMMIT_SHA=\${{ github.sha }}" >> $GITHUB_ENV
          echo "SHORT_SHA=$(echo \${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
      - name: Login to Amazon ECR
        uses: aws-actions/amazon-ecr-login@v2
        with:
          registries: "123456789012"
      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3
      - name: Build Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          file: ./Dockerfile
          tags: 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:pr-\${PR_NUMBER},123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
          platforms: linux/amd64
          push: false
          load: true
          cache-from: type=gha
          cache-to: type=gha,mode=max
      - name: Push image 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:pr-\${PR_NUMBER}
        run: docker push 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:pr-\${PR_NUMBER}
      - name: Push image 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
        run: docker push 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
"
`;

exports[`Container Build Pipeline GitHub Container Build Pipeline creates pipeline with multiple stages and registries 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: container-build
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  build:
    name: Build container image
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: write
    env:
      DOCKER_BUILDKIT: "1"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - name: Set up environment variables
        run: |-
          echo "BRANCH_NAME=\${{ github.ref_name }}" >> $GITHUB_ENV
          echo "COMMIT_SHA=\${{ github.sha }}" >> $GITHUB_ENV
          echo "SHORT_SHA=$(echo \${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3
      - name: Build Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          file: ./Dockerfile
          tags: myapp:\${COMMIT_SHA}
          build-args: NODE_VERSION=20
          platforms: linux/amd64,linux/arm64
          push: false
          load: true
          cache-from: type=gha
          cache-to: type=gha,mode=max
      - name: Save image as tarball
        run: docker save myapp:\${COMMIT_SHA} | gzip > image.tar.gz
      - name: Upload image artifact
        uses: actions/upload-artifact@v4
        with:
          name: container-image
          path: image.tar.gz
          retention-days: 1
  stage-staging:
    name: Deploy to staging
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: write
      id-token: write
    env:
      DOCKER_BUILDKIT: "1"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
      - name: Set up environment variables
        run: |-
          echo "BRANCH_NAME=\${{ github.ref_name }}" >> $GITHUB_ENV
          echo "COMMIT_SHA=\${{ github.sha }}" >> $GITHUB_ENV
          echo "SHORT_SHA=$(echo \${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
      - name: Download image artifact
        uses: actions/download-artifact@v4
        with:
          name: container-image
      - name: Load image from tarball
        run: docker load < image.tar.gz
      - name: Login to Amazon ECR
        uses: aws-actions/amazon-ecr-login@v2
        with:
          registries: "123456789012"
      - name: Tag image as 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
        run: docker tag myapp:\${COMMIT_SHA} 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
      - name: Tag image as 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${BRANCH_NAME}
        run: docker tag myapp:\${COMMIT_SHA} 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${BRANCH_NAME}
      - name: Tag image as 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:staging
        run: docker tag myapp:\${COMMIT_SHA} 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:staging
      - name: Run Trivy vulnerability scanner
        uses: aquasecurity/trivy-action@master
        with:
          image-ref: myapp:\${COMMIT_SHA}
          format: sarif
          exit-code: "0"
          severity: CRITICAL,HIGH
          output: trivy-results.sarif
      - name: Push image 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
        run: docker push 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${COMMIT_SHA}
      - name: Push image 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${BRANCH_NAME}
        run: docker push 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:\${BRANCH_NAME}
      - name: Push image 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:staging
        run: docker push 123456789012.dkr.ecr.us-east-1.amazonaws.com/myapp:staging
      - name: Upload Trivy scan results to GitHub Security
        if: always()
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: trivy-results.sarif
  stage-production:
    name: Deploy to production
    needs:
      - stage-staging
      - build
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: write
      id-token: write
    environment: production
    env:
      DOCKER_BUILDKIT: "1"
    steps:
      - name: Checkout
        uses: actions/checkout@v4
      - name: Set up environment variables
        run: |-
          echo "BRANCH_NAME=\${{ github.ref_name }}" >> $GITHUB_ENV
          echo "COMMIT_SHA=\${{ github.sha }}" >> $GITHUB_ENV
          echo "SHORT_SHA=$(echo \${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
      - name: Download image artifact
        uses: actions/download-artifact@v4
        with:
          name: container-image
      - name: Load image from tarball
        run: docker load < image.tar.gz
      - name: Login to Docker Hub
        uses: docker/login-action@v3
        with:
          username: \${{ secrets.DOCKERHUB_USERNAME }}
          password: \${{ secrets.DOCKERHUB_TOKEN }}
      - name: Login to Harbor
        uses: docker/login-action@v3
        with:
          registry: harbor.example.com
          username: \${{ secrets.HARBOR_USERNAME }}
          password: \${{ secrets.HARBOR_PASSWORD }}
      - name: Tag image as harbor.example.com/myapp:\${COMMIT_SHA}
        run: docker tag myapp:\${COMMIT_SHA} harbor.example.com/myapp:\${COMMIT_SHA}
      - name: Tag image as harbor.example.com/myapp:\${BRANCH_NAME}
        run: docker tag myapp:\${COMMIT_SHA} harbor.example.com/myapp:\${BRANCH_NAME}
      - name: Tag image as harbor.example.com/myapp:latest
        run: docker tag myapp:\${COMMIT_SHA} harbor.example.com/myapp:latest
      - name: Tag image as harbor.example.com/myapp:production
        run: docker tag myapp:\${COMMIT_SHA} harbor.example.com/myapp:production
      - name: Run Trivy vulnerability scanner
        uses: aquasecurity/trivy-action@master
        with:
          image-ref: myapp:\${COMMIT_SHA}
          format: sarif
          exit-code: "0"
          severity: CRITICAL,HIGH
          output: trivy-results.sarif
      - name: Generate SBOM with AWS Inspector
        run: |-
          # Install Inspector SBOM generator
                    curl -Lo inspector-sbomgen https://inspector-sbomgen-releases-us-east-1.s3.us-east-1.amazonaws.com/latest/linux/amd64/inspector-sbomgen
                    chmod +x inspector-sbomgen

                    # Generate SBOM
                    ./inspector-sbomgen cyclonedx -i myapp:\${COMMIT_SHA} -o sbom.json

                    echo "SBOM generated at sbom.json"
      - name: Push image myapp:\${COMMIT_SHA}
        run: docker push myapp:\${COMMIT_SHA}
      - name: Push image myapp:\${BRANCH_NAME}
        run: docker push myapp:\${BRANCH_NAME}
      - name: Push image myapp:latest
        run: docker push myapp:latest
      - name: Push image myapp:production
        run: docker push myapp:production
      - name: Push image harbor.example.com/myapp:\${COMMIT_SHA}
        run: docker push harbor.example.com/myapp:\${COMMIT_SHA}
      - name: Push image harbor.example.com/myapp:\${BRANCH_NAME}
        run: docker push harbor.example.com/myapp:\${BRANCH_NAME}
      - name: Push image harbor.example.com/myapp:latest
        run: docker push harbor.example.com/myapp:latest
      - name: Push image harbor.example.com/myapp:production
        run: docker push harbor.example.com/myapp:production
      - name: Upload Trivy scan results to GitHub Security
        if: always()
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: trivy-results.sarif
      - name: Upload SBOM artifact
        uses: actions/upload-artifact@v4
        with:
          name: sbom-production
          path: sbom.json
"
`;

exports[`Container Build Pipeline GitLab Container Build Pipeline creates basic pipeline with single stage 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

stages:
  - build
  - production
.docker_base:
  image:
    name: docker:24
  services:
    - name: docker:24-dind
  tags: []
  variables:
    DOCKER_HOST: tcp://docker:2376
    DOCKER_TLS_CERTDIR: /certs
    DOCKER_TLS_VERIFY: "1"
    DOCKER_CERT_PATH: $DOCKER_TLS_CERTDIR/client
    DOCKER_BUILDKIT: "1"
  before_script:
    - apk add --no-cache git curl
    - |-
      export BRANCH_NAME="$CI_COMMIT_REF_NAME"
      export COMMIT_SHA="$CI_COMMIT_SHA"
      export SHORT_SHA="$(echo $CI_COMMIT_SHA | cut -c1-7)"
.docker_build:
  extends:
    - .docker_base
  artifacts:
    paths:
      - image.tar.gz
    expire_in: 1 day
    when: on_success
.docker_deploy:
  extends:
    - .docker_base
build:
  extends:
    - .docker_build
  stage: build
  only:
    refs:
      - main
  script:
    - docker buildx create --use --driver docker-container || true
    - docker buildx build -t myapp:$COMMIT_SHA -f ./Dockerfile --platform linux/amd64  .
    - docker save myapp:$COMMIT_SHA | gzip > image.tar.gz
    - echo "Image saved to image.tar.gz"
  variables: {}
deploy_production:
  extends:
    - .docker_deploy
  stage: production
  only:
    refs:
      - main
  needs:
    - job: build
      artifacts: true
  script:
    - docker load < image.tar.gz
    - echo "Image loaded from tarball"
    - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
    - docker push myapp:$COMMIT_SHA
    - docker push myapp:$BRANCH_NAME
    - docker push myapp:production
  variables: {}
  artifacts:
    paths: []
    expire_in: 30 days
    when: always
"
`;

exports[`Container Build Pipeline GitLab Container Build Pipeline creates pipeline with feature branch support 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

stages:
  - build
  - production
.docker_base:
  image:
    name: docker:24
  services:
    - name: docker:24-dind
  tags: []
  variables:
    DOCKER_HOST: tcp://docker:2376
    DOCKER_TLS_CERTDIR: /certs
    DOCKER_TLS_VERIFY: "1"
    DOCKER_CERT_PATH: $DOCKER_TLS_CERTDIR/client
    DOCKER_BUILDKIT: "1"
  before_script:
    - apk add --no-cache git curl
    - |-
      export BRANCH_NAME="$CI_COMMIT_REF_NAME"
      export COMMIT_SHA="$CI_COMMIT_SHA"
      export SHORT_SHA="$(echo $CI_COMMIT_SHA | cut -c1-7)"
.docker_build:
  extends:
    - .docker_base
  artifacts:
    paths:
      - image.tar.gz
    expire_in: 1 day
    when: on_success
.docker_deploy:
  extends:
    - .docker_base
.aws_docker:
  extends:
    - .docker_base
  id_tokens:
    AWS_TOKEN:
      aud: https://sts.amazonaws.com
  before_script:
    - apk add --no-cache git curl aws-cli
    - |-
      export BRANCH_NAME="$CI_COMMIT_REF_NAME"
      export COMMIT_SHA="$CI_COMMIT_SHA"
      export SHORT_SHA="$(echo $CI_COMMIT_SHA | cut -c1-7)"
build:
  extends:
    - .docker_build
  stage: build
  only:
    refs:
      - main
  script:
    - docker buildx create --use --driver docker-container || true
    - docker buildx build -t myapp:$COMMIT_SHA -f ./Dockerfile --platform linux/amd64  .
    - docker save myapp:$COMMIT_SHA | gzip > image.tar.gz
    - echo "Image saved to image.tar.gz"
  variables: {}
deploy_production:
  extends:
    - .aws_docker
  stage: production
  only:
    refs:
      - main
  needs:
    - job: build
      artifacts: true
  script:
    - docker load < image.tar.gz
    - echo "Image loaded from tarball"
    - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com
    - docker tag myapp:$COMMIT_SHA $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:$COMMIT_SHA
    - docker tag myapp:$COMMIT_SHA $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:production
    - docker push $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:$COMMIT_SHA
    - docker push $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:production
  variables: {}
  artifacts:
    paths: []
    expire_in: 30 days
    when: always
build_feature:
  extends:
    - .aws_docker
  stage: build
  except:
    refs:
      - main
  script:
    - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com
    - docker buildx create --use --driver docker-container || true
    - docker buildx build -t $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:mr-$CI_MERGE_REQUEST_IID -t $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:$COMMIT_SHA -f ./Dockerfile --platform linux/amd64  .
    - docker push $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:mr-$CI_MERGE_REQUEST_IID
    - docker push $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:$COMMIT_SHA
  variables: {}
"
`;

exports[`Container Build Pipeline GitLab Container Build Pipeline creates pipeline with multiple stages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

stages:
  - build
  - staging
  - production
.docker_base:
  image:
    name: docker:24
  services:
    - name: docker:24-dind
  tags: []
  variables:
    DOCKER_HOST: tcp://docker:2376
    DOCKER_TLS_CERTDIR: /certs
    DOCKER_TLS_VERIFY: "1"
    DOCKER_CERT_PATH: $DOCKER_TLS_CERTDIR/client
    DOCKER_BUILDKIT: "1"
  before_script:
    - apk add --no-cache git curl
    - |-
      export BRANCH_NAME="$CI_COMMIT_REF_NAME"
      export COMMIT_SHA="$CI_COMMIT_SHA"
      export SHORT_SHA="$(echo $CI_COMMIT_SHA | cut -c1-7)"
.docker_build:
  extends:
    - .docker_base
  artifacts:
    paths:
      - image.tar.gz
    expire_in: 1 day
    when: on_success
.docker_deploy:
  extends:
    - .docker_base
.aws_docker:
  extends:
    - .docker_base
  id_tokens:
    AWS_TOKEN:
      aud: https://sts.amazonaws.com
  before_script:
    - apk add --no-cache git curl aws-cli
    - |-
      export BRANCH_NAME="$CI_COMMIT_REF_NAME"
      export COMMIT_SHA="$CI_COMMIT_SHA"
      export SHORT_SHA="$(echo $CI_COMMIT_SHA | cut -c1-7)"
build:
  extends:
    - .docker_build
  stage: build
  only:
    refs:
      - main
  script:
    - docker buildx create --use --driver docker-container || true
    - docker buildx build -t myapp:$COMMIT_SHA -f ./Dockerfile --build-arg NODE_VERSION=20 --platform linux/amd64  .
    - docker save myapp:$COMMIT_SHA | gzip > image.tar.gz
    - echo "Image saved to image.tar.gz"
  variables: {}
deploy_staging:
  extends:
    - .aws_docker
  stage: staging
  only:
    refs:
      - main
  needs:
    - job: build
      artifacts: true
  script:
    - docker load < image.tar.gz
    - echo "Image loaded from tarball"
    - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com
    - docker tag myapp:$COMMIT_SHA $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:$COMMIT_SHA
    - docker tag myapp:$COMMIT_SHA $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:staging
    - wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | apt-key add -
    - echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | tee -a /etc/apt/sources.list.d/trivy.list
    - apt-get update && apt-get install -y trivy
    - trivy image --severity CRITICAL,HIGH --exit-code 0 --format json -o trivy-results.json myapp:$COMMIT_SHA
    - docker push $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:$COMMIT_SHA
    - docker push $(aws sts get-caller-identity --query Account --output text).dkr.ecr.us-east-1.amazonaws.com/myapp:staging
  variables: {}
  artifacts:
    paths:
      - trivy-results.json
    expire_in: 30 days
    when: always
deploy_production:
  extends:
    - .aws_docker
  stage: production
  only:
    refs:
      - main
  needs:
    - job: build
      artifacts: true
  when: manual
  script:
    - docker load < image.tar.gz
    - echo "Image loaded from tarball"
    - echo "$HARBOR_PASSWORD" | docker login -u "$HARBOR_USERNAME" --password-stdin harbor.example.com
    - docker tag myapp:$COMMIT_SHA harbor.example.com/myapp:$COMMIT_SHA
    - docker tag myapp:$COMMIT_SHA harbor.example.com/myapp:latest
    - docker tag myapp:$COMMIT_SHA harbor.example.com/myapp:production
    - curl -Lo inspector-sbomgen https://inspector-sbomgen-releases-us-east-1.s3.us-east-1.amazonaws.com/latest/linux/amd64/inspector-sbomgen
    - chmod +x inspector-sbomgen
    - ./inspector-sbomgen cyclonedx -i myapp:$COMMIT_SHA -o sbom.json
    - echo "SBOM generated at sbom.json"
    - docker push harbor.example.com/myapp:$COMMIT_SHA
    - docker push harbor.example.com/myapp:latest
    - docker push harbor.example.com/myapp:production
  variables: {}
  artifacts:
    paths:
      - sbom.json
    expire_in: 30 days
    when: always
"
`;
